fix the bookmark issue in the toplistng and fix the gap between the icons and property details in the card

--- a/client/src/user/page/UserDashBoard/Saved/SavedProperties.css
+++ b/client/src/user/page/UserDashBoard/Saved/SavedProperties.css
@@ -22,8 +22,9 @@
     width: 25px;
 }
 .saved-properties-bookmark-icons:hover{
-    color: #939393;
+    color: #5a4bd7;
     cursor: pointer;
+    transition: color 0.3s ease;
 }
 
 /* Dropdown menu */
